[tool.poetry]
name = "moll"
version = "0.1.11"
description = ""
authors = ["Vsevolod Shegolev <v@sheg.cc>"]
readme = "README.md"
license = "LGPL-2.1-or-later"
exclude = ["moll/**/tests/"]
repository = "https://github.com/vsheg/moll"
documentation = "https://vsheg.github.io/moll/"
keywords = ["chemistry", "cheminformatics", "chemoinformatics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: GPU :: NVIDIA CUDA",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
rdkit = "^2023.3.1"
loguru = "^0.7.2"
jax = { version = "^0.4.20", extras = ["cpu"], optional = true }
atpublic = "^4.0"
datamol = "^0.12.2"

[tool.poetry.extras]
cpu = ["jax"]

[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.1"
seaborn = "^0.12.2"
pytest = "^7.3.2"
ipykernel = "^6.25.2"
ipython = "^8.15.0"
autopep8 = "^2.0.4"
pytest-xdist = "^3.3.1"
ipywidgets = "^8.1.1"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
pytest-cov = "^4.1.0"
cloudpickle = "^3.0.0"
ruff = "^0.1.8"
pre-commit = "^3.6.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
black = "^23.12.0"
mkdocstrings = { extras = ["python"], version = "^0.24.0" }
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocs-material = "^9.5.2"
mkdocs-minify-plugin = "^0.7.1"
mkdocs-jupyter = "^0.24.6"


[tool.poetry.group.torch]
optional = true

[tool.poetry.group.torch.dependencies]
torch = { version = "^2.1.0", source = "torch" }


[tool.pytest.ini_options]
testpaths = ["moll/"]
addopts = """
--doctest-modules \
--doctest-continue-on-failure \
-n auto
"""

[tool.ruff]
target-version = "py310"
extend-include = ["*.ipynb"]


[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "TCH",  # flake8-type-checking 
    "D",    # flake8-docstrings
    "D213", # start docstring on a second line
]
ignore = [
    "D103", # missing docstring in public function
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic method
    "D200", # one-line docstring should fit on one line 
    "D202", # no blank lines allowed after function docstring
    "D212", # start docstring on a first line
]
pydocstyle.convention = "google"

[tool.ruff.per-file-ignores]
"moll/**/test*" = ["D100"]

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "jax_cuda"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "explicit"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
