[tool.poetry]
name = "moll"
version = "0.1.12"
description = ""
authors = ["Vsevolod Shegolev <v@sheg.cc>"]
readme = "README.md"
license = "LGPL-2.1-or-later"
exclude = ["moll/**/tests/"]
repository = "https://github.com/vsheg/moll"
documentation = "https://vsheg.github.io/moll/"
keywords = ["chemistry", "cheminformatics", "chemoinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: GPU :: NVIDIA CUDA",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
loguru = "^0.7.2"
atpublic = "^4.0"
datamol = "^0.12.2"

[tool.poetry.group.cpu]
optional = true

[tool.poetry.group.cpu.dependencies]
jax = "^0.4.30"

[tool.poetry.group.cuda]
optional = true

[tool.poetry.group.cuda.dependencies]
jax = { version = "^0.4.30", extras = ["cuda12"] }

[tool.poetry.group.metal]
optional = true

[tool.poetry.group.metal.dependencies]
jax-metal = "^0.1.0"
jax = "^0.4.26"
jaxlib = "^0.4.26"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
tqdm = "^4.66.1"
seaborn = "^0.12.2"
pytest = "^7.3.2"
ipykernel = "^6.25.2"
ipython = "^8.15.0"
autopep8 = "^2.0.4"
pytest-xdist = "^3.3.1"
ipywidgets = "^8.1.1"
scikit-learn = "^1.3.2"
jupyter = "^1.0.0"
pytest-cov = "^4.1.0"
cloudpickle = "^3.0.0"
ruff = "^0.1.8"
pre-commit = "^3.6.0"
pyarrow = "^15.0.0"
papermill = "^2.5.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
black = "^23.12.0"
mkdocstrings = { extras = ["python"], version = "^0.24.0" }
mkdocs-gen-files = "^0.5.0"
mkdocs-literate-nav = "^0.6.1"
mkdocs-section-index = "^0.3.8"
mkdocs-material = "^9.5.2"
mkdocs-minify-plugin = "^0.7.1"
mkdocs-jupyter = "^0.24.6"


[tool.pytest.ini_options]
testpaths = ["moll/"]
addopts = """
--doctest-modules \
--doctest-continue-on-failure \
-n auto
"""

[tool.ruff]
target-version = "py310"
extend-include = ["*.ipynb"]
format.docstring-code-format = true


[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "TCH",  # flake8-type-checking 
    "D",    # flake8-docstrings
    "D213", # start docstring on a second line
]
ignore = [
    "D103", # missing docstring in public function
    "D104", # missing docstring in public package
    "D105", # missing docstring in magic method
    "D200", # one-line docstring should fit on one line 
    "D202", # no blank lines allowed after function docstring
    "D212", # start docstring on a first line
]
pydocstyle.convention = "google"

[tool.ruff.per-file-ignores]
"moll/**/test*" = ["D100"]


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
